# sampex_microburst_widths

./: .gitignore  LICENSE  README.md  dirs.py  identify_microbursts.py  load_hilt_data.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/: microburst_test_catalog.csv
microburst_id/: identify_microbursts.py  locate_consecutive_numbers.py  signal_to_background.py
paper/: count_words_pdf.sh  refs.bib  shumko_sampex_microburst_durations_v00.aux  shumko_sampex_microburst_durations_v00.bbl  shumko_sampex_microburst_durations_v00.blg  shumko_sampex_microburst_durations_v00.tex  shumko_sampex_microburst_durations_v01.bbl  shumko_sampex_microburst_durations_v01.tex  shumko_sampex_microburst_durations_v01.txt  shumko_sampex_microburst_durations_v02.tex  shumko_sampex_microburst_durations_v10.tex  shumko_sampex_microburst_durations_v11.tex  shumko_sampex_microburst_durations_v20.tex  shumko_sampex_microburst_durations_v20_bbl.tex  shumko_sampex_microburst_durations_v20_v30_diff.bbl  shumko_sampex_microburst_durations_v20_v30_diff.tex  shumko_sampex_microburst_durations_v21.bbl  shumko_sampex_microburst_durations_v21.tex  shumko_sampex_microburst_durations_v30.tex  shumko_sampex_microburst_durations_v30_submit.tex
paper/archive/: shumko_sampex_microburst_durations_v00.tex  shumko_sampex_microburst_durations_v10.tex  (+5 more)
reports/: 20201020_sampex_microburst_widths_update.pptx  20201103_shumko_sampex_microburst_durations.pptx  20210610_shumko_sampex_microburst_durations.pptx  20230316_dusk_microbursts.pptx
sampex_microburst_widths/: __main__.py  compare_detections.py
(+38 files in other folders)
