[metadata]
name = sampex_microburst_widths
version = 0.1.0
url='https://github.com/mshumko/sampex_microburst_widths'
author='Mykhaylo Shumko'
author_email='msshumko@gmail.com'

[options]
packages = sampex_microburst_widths
install_requires =
    numpy
    matplotlib>=3.5.0  # labels kwarg introduced to set_ticks()
    pandas
    scipy
    pytest
    sampex >= 1.0.0